--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -7,7 +7,6 @@
 html {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto', sans-serif;
 }
 
 h1 {
@@ -15,12 +14,12 @@ h1 {
 }
 
 h2 {
-    color: $header-blue2;
+    color: $purple;
 }
 
 body {
     color: $body-black;
-    font-family: 'Roboto', sans-serif;
+    font-weight: 300;
 }
 
 .mg-barplot rect.mg-bar.default-bar {
@@ -38,6 +37,10 @@ body {
   border-radius: 0;
 }
 
+.button-green {
+  color: $button-green;
+}
+
 .form-control {
   border-radius: 0px;
 }
@@ -48,47 +51,10 @@ body {
 
 .comment-field {
   margin: 1rem 0rem;
-  background-color: f2f2f2;
+  background-color: #f2f2f2;
   > textarea {
     min-height: 10rem;
     min-width: 100%;
-  }
-}
-
-input.form-control {
-    min-width: 350px;
-}
-
-select.form-control {
-  display: inline;
-  width: auto;
-  margin: 0 0.5rem;
-}
-
-.natural-language-selects {
-  margin-top: 1rem;
-  font-size: 1.2rem;
-  line-height: 2.4rem;
-  select {
-    font-size: 1.2rem;
-    height: 2.4rem;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    padding-left: 5px;
-    padding-right: 25px;
-    border: none;
-    border-bottom: solid 2px $button-green;
-    box-shadow: none;
-  }
-  button {
-    width: 100%;
-    margin-bottom: 1rem;
-  }
-  label.select-arrow {
-    margin-left: -30px;
-    margin-right: 15px;
-    font-size: 1rem;
-    color: $button-green;
   }
 }
 
@@ -106,14 +72,19 @@ select.form-control {
     margin: 0;
 }
 
+span.navbar-brand.title {
+      font-size: 20px;
+      color: white;
+}
+
 .navbar-default {
-    background-color: $bc-blue;
+    background-color: $yellow;
     color: $secondary-blue;
-    border: 1px solid #003366;
-    border-bottom: solid 3px $bc-yellow !important;
+    border: 1px solid $yellow;
+    border-bottom: solid 3px $yellow !important;
     border-radius: 0px;
     .navbar-brand {
-      color: white;
+      color: bisque;
     }
 }
 
@@ -136,11 +107,12 @@ nav {
   //border-bottom: 0 !important;
 }
 
+
 /* make sidebar nav vertical */ 
 @media (min-width: 768px) {
   .sidebar-nav {
     min-height: 100%;
-    background-color: $bc-blue;
+    background-color: $yellow;
     padding: 0;
   }
   .sidebar-nav .navbar ul {
@@ -162,3 +134,8 @@ nav {
     }
   }
 }
+
+@import 'map';
+@import 'data-selector';
+@import 'supplemental-graph';
+@import 'map-legend';
