--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -1,12 +1,11 @@
 $ps-gold: #f5bd47;
-$bc-blue: #003366;
+$yellow: #F7B736;
 $bc-white: #f2f2f2;
-$bc-yellow: #E6B901;
-$header-blue: #305881;
-$header-blue2: #2A649A;
+$header-blue:  #252850;
+$purple: #F176F2;
 $secondary-blue: #C7D6ED;
 $body-black: #494949;
-$button-green: #45B0A6;
+$button-green: #00CAD6;
 
 //Heights//
 $max-height: 100%;
