--- a/src/scss/colors.scss
+++ b/src/scss/colors.scss
@@ -3,9 +3,11 @@ $yellow: #F7B736;
 $bc-white: #f2f2f2;
 $header-blue:  #252850;
 $purple: #F176F2;
+$link-blue: #337ab7;
 $secondary-blue: #C7D6ED;
 $body-black: #494949;
 $button-green: #00CAD6;
+
 
 //Heights//
 $max-height: 100%;
