--- a/src/scss/data-selector.scss
+++ b/src/scss/data-selector.scss
@@ -10,6 +10,9 @@
             padding-left: 0.5rem;
             margin-left: 0;
         }
+        i {
+            font-size: 1.2rem !important;
+        }
     }
 
     input.form-control {
@@ -63,18 +66,13 @@
         padding: 0;
         margin: 0;
         border: 0;
-        font-size: 1.2rem;
-        margin-left: 0.2rem;
-        padding-bottom: 0.2rem;
-        line-height: 100%;
+        // font-size: 1.2rem;
+        // padding-bottom: 0.2rem;
+        // line-height: 100%;
         background-color: transparent;
         color: $button-green;
         &:hover {
             color: lighten($button-green, 10%);
-        }
-        i {
-            margin-right: 0;
-            font-size: 1.2rem;
         }
     }
 
@@ -85,6 +83,14 @@
         color: $button-green;
         // Required to let user click 'through' label on select underneath
         pointer-events: none;
+    }
+
+    .matches {
+        font-weight: 500;
+        color: #337ab7;
+        a {
+            cursor: pointer;
+        }
     }
 
     p.operation {
@@ -110,5 +116,4 @@
             }
         }
     }
-
 }
