--- a/src/scss/normalize.scss
+++ b/src/scss/normalize.scss
@@ -1,9 +1,9 @@
-$base-font-family: 'Roboto', sans-serif;
+//$base-font-family: 'Roboto', sans-serif;
 $base-font-family: -apple-system, BlinkMacSystemFont, 
     "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", 
     "Fira Sans", "Droid Sans", "Helvetica Neue", 
     sans-serif;
-$base-font-family: 'Helvetica Neue';
+$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif ;
 
 /*! normalize.css v5.0.0 | MIT License | github.com/necolas/normalize.css */
 
